# roscon-2023-realtime-workshop

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  hands_on_excercises_safety_camera_topology.pptx  index.html  stress.sh
.devcontainer/: Dockerfile  devcontainer.json  ros-activate.sh  shell
base-image/: .gitignore  Makefile  README.md  build.sh
base-image/workshop/: config.ini
base-image/workshop/scripts/: phase1-target
cactus-rt-ros-examples/inverted-pendulum/: CMakeLists.txt  package.xml  rt_thread.cc
cactus-rt-ros-examples/inverted-pendulum/src/: data_logger_thread.cc  main.cc
css/: style.css
docker/: README.md  build.sh  fetch  import  rpi_ssh.conf  shell  start  stop
docker/profile.d/: custom.sh
docs/: WorkshopCheatsheet.odt
exercise1/: run.sh
exercise1/solutions/: baseline.perfetto  solution.perfetto
exercise1/src/latency_tester/: CMakeLists.txt  main.cc  package.xml
exercise1/src/latency_tester/src/: main.cc
exercise2/: README.md  build.sh  run-example2-1.sh  run-example2-2.sh  run-example2-3.sh  run-exercise2-2.sh
exercise2-1/: README.md  run.sh
exercise2-1/src/inverted_pendulum/: CMakeLists.txt  package.xml
exercise2-1/src/inverted_pendulum/include/inverted_pendulum/message_passing/: multiple_data.h  single_data.h
exercise2-1/src/inverted_pendulum/launch/: exercise2-1.launch.py
exercise2-1/src/inverted_pendulum/src/: main.cc  ros_pendulum_node.cc
exercise2-1/src/inverted_pendulum_interfaces/: CMakeLists.txt
exercise2-2/: README.md  run.sh
exercise2-2/src/inverted_pendulum/: CMakeLists.txt  package.xml
exercise2-3/: README.md  run.sh
exercise2-3/src/inverted_pendulum/: CMakeLists.txt  package.xml
exercise2-3/src/inverted_pendulum_description/: package.xml
exercise2-3/src/inverted_pendulum_description/urdf/: pendulum.urdf
exercise2-3/src/inverted_pendulum_interfaces/: package.xml
exercise2/solutions/: data_queue.h  multiple_data.h  single_data.h
exercise2/src/inverted_pendulum/: CMakeLists.txt  README.md  package.xml
exercise2/src/inverted_pendulum/include/inverted_pendulum/: rt_thread.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/exercise2-1/: ros_pendulum_node.h  rt_thread.h  shared_context.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/exercise2-1/message_passing/: data_queue.h  multiple_data.h  single_data.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/exercise2-2/: ros_pendulum_node.h  rt_thread.h  shared_context.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/exercise2-2/message_passing/: data_queue.h  multiple_data.h  single_data.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/exercise2-3/: ros_pendulum_node.h  rt_thread.h  shared_context.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/exercise2-3/message_passing/: data_queue.h  multiple_data.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/message_passing/: data_queue.h  multiple_data.h
exercise2/src/inverted_pendulum/include/inverted_pendulum/solutions/: data_queue.h
exercise2/src/inverted_pendulum/launch/: demo.launch.py  exercise2-1.launch.py  exercise2-2.launch.py  exercise2-3.launch.py
exercise2/src/inverted_pendulum/src/: main.cc  ros_pendulum_node.cc  rt_thread.cc
exercise2/src/inverted_pendulum/src/exercise2-1/: main.cc  ros_pendulum_node.cc  rt_thread.cc
exercise2/src/inverted_pendulum/src/exercise2-2/: main.cc  ros_pendulum_node.cc  rt_thread.cc
exercise2/src/inverted_pendulum/src/exercise2-3/: main.cc  ros_pendulum_node.cc  rt_thread.cc
exercise3/: README.md  build.sh
exercise3-1/: README.md  run.sh
exercise3-1/results/: solution.perfetto
exercise3-1/solutions/: main.cc
exercise3-1/src/camera_demo/: CMakeLists.txt  package.xml
exercise3-2/: README.md  build.sh  run.sh
exercise3-2/results/: solution.perfetto
exercise3-2/solutions/: application_nodes.cc  main.cc
exercise3-2/src/camera_demo/: CMakeLists.txt  package.xml
exercise3-2/src/camera_demo/include/: application_nodes.h  system_nodes.h  tracing.h
exercise3-2/src/camera_demo/src/: application_nodes.cc  main.cc  tracing.cc
exercise3/src/: ros2.repos
exercise3/src/camera_demo/: CMakeLists.txt  package.xml
exercise3/src/camera_demo/src/: actuation_node.cpp  camera_demo.cpp  publisher_node.cpp  sensor_node.cpp
exercise3_old/: build.sh
exercise4/: README.md
exercise4-1/: README.md  run.sh
exercise4-1/results/: exercise4-1-baseline.perfetto  exercise4-1-solution.perfetto  exercise4-1.perfetto
exercise4-1/solution/: system_nodes.cc
exercise4-1/solutions/: exercise4-1-baseline.perfetto  exercise4-1-solution.perfetto  main.cc
exercise4-1/src/camera_demo/: CMakeLists.txt  package.xml
exercise4-1/src/camera_demo/include/: system_nodes.h  utils.h
exercise4-1/src/camera_demo/src/: application_nodes.cc  main.cc
exercise4-2/: run.sh
exercise4-2/results/: exercise4-2-baseline.perfetto  exercise4-2-solution.perfetto  exercise4-2.perfetto
exercise4-2/solutions/: application_nodes.cc  main.cc
exercise4/src/camera_demo/: CMakeLists.txt  package.xml
exercise4/src/camera_demo/include/camera_demo/: sensor_node.hpp
exercise4/src/camera_demo/src/: actuation_node.cpp  camera_demo.cpp  publisher_node.cpp  sensor_node.cpp
inverted-pendulum/: CMakeLists.txt  rt_thread.h
prebuilts/: Makefile  README.md
prebuilts/installers/: perfetto
prebuilts/perfetto/: index.html
pres/: index.html
src/exercise2/inverted_pendulum/: CMakeLists.txt
src/exercise2/inverted_pendulum/include/inverted_pendulum/: ros_pendulum_node.h  shared_context.h
src/exercise2/inverted_pendulum/include/inverted_pendulum/message_passing/: data_queue.h  multiple_data.h  single_data.h
src/exercise2/inverted_pendulum/launch/: demo.launch.py
src/exercise2/inverted_pendulum/src/: main.cc  ros_pendulum_node.cc  rt_thread.cc
src/exercise2/inverted_pendulum_description/: CMakeLists.txt  package.xml
src/exercise2/inverted_pendulum_description/launch/: display.launch.py
src/exercise2/inverted_pendulum_description/urdf/: pendulum.urdf
(+68 files in other folders)
